resources/testcases_static_checks/tests/negative/isRmfa/higherCyclicTermDeptchRequired.rls
R(!Z, ?X) :- A(?X) .
A(?X) :- R(?X, ?Y), C(?Y) .

